--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ box-sizing: border-box;}
 .top-banner{display: flex;
 background-image: url(images/top-banner.png);
 background-repeat: no-repeat;
-background-size: cover;}
+background-size: cover;
+margin-bottom: 150px;}
 .half-width{width: 50%;
 padding-left: 5%;}
 .half-width img{width: 75%;}
@@ -15,9 +16,13 @@ margin-top: 80px;}
 .headtwo{font-size: 50px;
 margin-top: 40px;
 margin-bottom: 30px;}
-h3{margin-bottom: 10px;}
+h1{font-size: 50px;}
+h2{font-size: 40px;}
+h3{font-size: 25px;
+    margin-bottom: 15px;}
 .half-width p{color: rgba(56, 55, 55, 0.911);
-margin-bottom: 40px;}
+margin-bottom: 40px;
+padding-right: 50px;}
 #main-img{margin-top: 50px;}
 .link-btn{ text-decoration: none;
           background-image: linear-gradient(120deg,orange,orangered);
@@ -28,3 +33,14 @@ margin-bottom: 40px;}
           font-weight: 700;
           margin:0 auto;
 }
+.dream-big{display: flex;
+background-image: url(images/dream-bg.png);
+background-repeat: no-repeat;
+background-position: right;}
+
+.sech1{font-size: 50px;
+margin-top: 30px;}
+.sech2{font-size: 40px;
+margin-top: 40px;
+margin-bottom: 20px;}
+
